# FlameMaster

./: Grey.h  Input.h  README.md  SNB.cpp  SNB.h  TTransFlameSolver.hpp  TTransFlamelet.hpp  WSGG.cpp  WSGGJohansson.h
Repository/: CMakeLists.txt  CONTRIBUTING.md  MAC_Prerequisites.md  README.md
Repository/cmake/: CreateBinFileConfig.cmake.in  FlameManConfig.cmake.in  FlameMasterLibsConfig.cmake.in  ListToolConfig.cmake.in  Macros.cmake  ScanManConfig.cmake.in
Repository/cmake/Modules/: FindSUNDIALS.cmake
Repository/src/: AbsorptionModel.cpp  AbsorptionModel.h  FlameMaster.h  FlameMasterMain.C  RadiationModel.cpp  RadiativeFunctions.h  TCountDiffFlameMix.hpp  TFlame.h  TProperties.C  TProperties.h  TProperties.hpp  TRadiation.h  TSpecies.h  TSpecies.hpp  TTransFlamelet.h  WSGGBordbar.cpp  WSGGBordbar.h  WSGGJohansson.cpp
Repository/src/FlameMan/: FlameNode.h  Grey.cpp  RadiationModel.h  TCountDiffFlameMix.h  TFlame.hpp  TInputData.C  TTransFlameSolver.h  WSGG.h
